--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -157,7 +157,7 @@ label > span {
 	font-weight: 500;
 	font-size: 1.25rem;
 	color: #2f353e;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Manrope', sans-serif;
 	letter-spacing: -0.75px;
 }
 
