--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -6,7 +6,7 @@
 	padding: 10px;
 	font-size: 0.9rem;
 	/* background-color: #f8f9fa; */
-	border: 1px solid #fbce71;
+	border: 1px solid #35ca6a;
 }
 .nav-tab-pills img {
 	width: 16px;
