--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -9230,28 +9230,28 @@ input.checkbox-input {
 	font-weight: 500;
 	color: #2f353e;
 }
-
 .email-popup {
-	position: fixed !important;
-	display: flex;
-	/* bottom: 0; */
-	width: 100%;
-	background-color: rgba(0, 0, 0, 0.8);
-	z-index: 99999;
-	top: 0;
-	height: 100vh;
-	/* z-index: 3; */
-	/* align-content: center; */
-	justify-content: center;
-	align-items: center;
+    position: fixed !important;
+    display: flex;
+    /* bottom: 0; */
+    width: 100%;
+    background-color: #adadad;
+    z-index: 99999;
+    top: 0;
+    height: 100vh;
+    /* z-index: 3; */
+    /* align-content: center; */
+    justify-content: center;
+    align-items: center;
 }
 
 span.close-btn {
-	position: absolute;
-	right: 35px;
-	top: 20px;
-	font-size: 24px;
-	cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: -50px;
+    font-weight: 600;
+    font-size: 30px;
+    cursor: pointer;
 }
 
 .home-page-popup {
@@ -9377,4 +9377,40 @@ h1.h1-md.white-color.text-left {
 .blog-test ul li {
 	font-size: 1.35rem;
 	margin-bottom: 10px;
+}
+
+.animated-text {
+    /* font-family: Helvetica Neue, Helvetica, Arial, sans-serif; */
+    font-size: 2rem !important;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    /* text-align: center; */
+    /* color: #f35626;
+    background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a); */
+	background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(100,14,241,1) 35%, rgba(0,255,91,1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-animation: hue 10s infinite linear;
+}
+
+@-webkit-keyframes hue {
+  from {
+    -webkit-filter: hue-rotate(0deg);
+  }
+  to {
+    -webkit-filter: hue-rotate(-360deg);
+  }
+}
+
+.bg-image-3 {
+    background-image: url(../images/popup-image.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    /* object-fit: contain; */
+    object-fit: fill;
+    background-size: cover;
+    /* outline: 1px solid #000; */
+    border-radius: 0 15px 15px 0;
 }
