--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -9235,7 +9235,7 @@ input.checkbox-input {
     display: flex;
     /* bottom: 0; */
     width: 100%;
-    background-color: #adadad;
+    background-color: rgb(0 0 0 / 88%);
     z-index: 99999;
     top: 0;
     height: 100vh;
@@ -9328,7 +9328,7 @@ span.close-btn {
 }
 
 .react-multi-carousel-item {
-	margin-bottom: 75px !important;
+	/* margin-bottom: 75px !important; */
 }
 
 .react-multi-carousel-item img {
@@ -9341,6 +9341,10 @@ span.close-btn {
 
 h1.h1-md.white-color.text-left {
 	text-align: left;
+}
+
+.trial-popup-container{
+	width: 75%;
 }
 
 .request-quote-footer {
@@ -9415,12 +9419,12 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(100,14,241,1) 35%, rg
     border-radius: 0 15px 15px 0;
 }
 
-.btn-popup{
-		z-index: 9999;
-		left: 50%;
-		top: 8px;
-		position: absolute;
-	
+.btn-popup {
+    z-index: 9999;
+    left: 28px;
+    top: 57px;
+    position: absolute;
+    border: solid 1px #4CAF50;
 }
 
 .calendly-iframe {
