--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-	font-family: 'Manrope', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #6c757d;
 	line-height: 1.6666;
 	font-weight: 400;
@@ -1268,7 +1268,7 @@ h4,
 h5,
 h6 {
 	color: #2f353e;
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
 	letter-spacing: -0.75px;
 }
@@ -4800,6 +4800,9 @@ p.terms-txt a,
 
 .hero-20-txt h1 {
 	margin-bottom: 25px;
+	font-size: 4.4rem;
+    font-weight: 700;
+	line-height: 6rem;
 }
 
 .hero-20-txt p {
@@ -8679,7 +8682,7 @@ p.forgot-password {
 
 .login-separator-txt {
 	position: relative;
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 1.05rem;
 	font-weight: 400;
 }
