--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,12 +97,14 @@ a {
 	font-weight: 600;
 }
 .default-btn {
-	padding: 8px 8px 8px 50px;
+	/* padding: 8px 8px 8px 50px; */
+	padding: 8px 8px 8px 19px;
 	border-radius: 10px;
 	display: inline-block;
 	color: var(--e-global-color-white);
 	background: var(--e-global-color-bright-blue);
 	transition: all 0.3s ease-in-out;
+	font-weight: 400 !important;
 }
 .default-btn:hover {
 	background: var(--e-global-color-accent);
@@ -217,12 +219,18 @@ header {
 	margin-left: 6px;
 }
 .navbar-nav .nav-item .talk_btn {
-	font-weight: 600 !important;
-	padding: 8px 10px 8px 32px !important;
+	font-weight: 400 !important;
+	/* padding: 8px 10px 8px 32px !important; */
+	padding: 9px 14px 8px 12px !important;
+
 	border-radius: 10px;
 	color: var(--e-global-color-white) !important;
 	background-color: var(--e-global-color-bright-blue);
 	transition: all 0.3s ease-in-out;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	gap: 8px;
 }
 .navbar-nav .nav-item .talk_btn:hover {
 	color: var(--e-global-color-white) !important;
@@ -233,7 +241,7 @@ header {
 	background-color: var(--e-global-color-white);
 	padding: 14px 19px;
 	border-radius: 8px;
-	margin-left: 22px;
+	/* margin-left: 22px; */
 	font-size: 16px;
 	line-height: 16px;
 	transition: all 0.3s ease-in-out;
@@ -306,9 +314,9 @@ header {
 }
 .banner-section-outer .banner-section .banner-section-content p {
 	font-family: 'Montserrat', sans-serif;
-	font-size: 24px;
+	font-size: 16px;
 	line-height: 38px;
-	font-weight: 600;
+	font-weight: 400;
 }
 .banner-section-outer .banner-section-content .btn_wrapper {
 	padding-left: 60px;
@@ -317,15 +325,17 @@ header {
 	margin-right: 12px;
 }
 .banner-section-outer .banner-section .banner_image {
-	margin-left: -30px;
-	margin-top: -40px;
+	/* margin-left: -30px;
+	margin-top: -40px; */
 }
 .banner-section-outer .banner-section .banner_image .banner_main_image {
 	position: relative;
 	z-index: 1;
 }
 .banner-section-outer .banner-section .banner_image .banner_main_image img {
-	border-radius: 55px;
+	/* border-radius: 55px; */
+	border-radius: 29px;
+	width: 400px;
 }
 .banner-section-outer .banner-section .banner_best_image {
 	margin-right: -30px;
@@ -382,8 +392,8 @@ header {
 	}
 }
 .left_right_shape img {
-	-webkit-animation: movers 1s infinite alternate;
-	animation: movers 1s infinite alternate;
+	/* -webkit-animation: movers 1s infinite alternate; */
+	/* animation: movers 1s infinite alternate; */
 	/* width: 100%; */
 	object-fit: cover;
 }
@@ -483,7 +493,8 @@ header {
 }
 .services_section .services_box {
 	background-image: linear-gradient(33deg, var(--e-global-color-very-dark-black) 0%, var(--e-global-color-very-dark-grayish-blue) 100%);
-	padding: 48px 40px 45px 45px;
+	/* padding: 48px 40px 45px 45px; */
+	padding: 12px;
 	border-radius: 20px;
 	position: relative;
 	z-index: 1;
