--- a/public/css/mediaqueries.css
+++ b/public/css/mediaqueries.css
@@ -969,13 +969,14 @@
 		margin-bottom: 60px;
 	}
 	.services_section .services_box {
-		padding: 30px 10px;
+		/* padding: 30px 10px; */
+		padding: 15px;
 	}
 	.services_section .services_box figure {
 		margin-bottom: 25px;
 	}
 	.services_section .services_box figure img {
-		width: 61px;
+		/* width: 61px; */
 	}
 	h5 {
 		font-size: 16px;
@@ -1771,14 +1772,15 @@
 		line-height: 38px;
 	}
 	.services_section .services_box {
-		padding: 25px 10px;
+		/* padding: 25px 10px; */
+		padding: 15px;
 		margin-bottom: 30px;
 	}
 	.services_section .services_box figure {
 		margin-bottom: 20px;
 	}
 	.services_section .services_box figure img {
-		width: 55px;
+		/* width: 55px; */
 	}
 	.services_section .services_box p {
 		margin-bottom: 10px;
@@ -2294,7 +2296,8 @@
 		line-height: 32px;
 	}
 	.services_section .services_box {
-		padding: 25px 20px;
+		/* padding: 25px 20px; */
+		padding: 15px;
 		text-align: center;
 	}
 	.services_section .services_right_shape img {
